RESOLVED FIXED30251
[Qt] Windowless Plugins : Fix crash when using QWebPage without QWebView.
https://bugs.webkit.org/show_bug.cgi?id=30251
Summary [Qt] Windowless Plugins : Fix crash when using QWebPage without QWebView.
Girish Ramakrishnan
Reported 2009-10-09 05:44:10 PDT
Check if the client pointer is valid before accessing it.
Attachments
Check if client is null (1.77 KB, patch)
2009-10-09 06:05 PDT, Girish Ramakrishnan
no flags
Girish Ramakrishnan
Comment 1 2009-10-09 06:05:25 PDT
Created attachment 40945 [details] Check if client is null
WebKit Commit Bot
Comment 2 2009-10-09 07:58:58 PDT
Comment on attachment 40945 [details] Check if client is null Clearing flags on attachment: 40945 Committed r49391: <http://trac.webkit.org/changeset/49391>
WebKit Commit Bot
Comment 3 2009-10-09 07:59:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.