2009-10-09  Girish Ramakrishnan  <girish@forwardbias.in>

Reviewed by Simon Hausmann.

        [Qt] Windowless Plugins : Fix crash when using QWebPage without QWebView.

        'client' is 0 when we have no view.

        https://bugs.webkit.org/show_bug.cgi?id=30251

        * plugins/qt/PluginViewQt.cpp:
        (WebCore::PluginView::paint):

Canonical link: https://commits.webkit.org/40913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49391 268f45cc-cd09-0410-ab3c-d52691b4dbfc